--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/forge-std"]
-	path = lib/forge-std
+	path = forgeTest1/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
