--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "lib/forge-std"]
 	path = forgeTest1/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "forgeTest2/lib/forge-std"]
+	path = forgeTest2/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
